spacing fixed

--- a/rwds.css
+++ b/rwds.css
@@ -617,10 +617,10 @@ div.quarto-post a {
 }
 
 .top-story-text h2 {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
 }
 
-.top-story-text p {
+.top-story-img p {
   margin-bottom: 0;
 }
 
